[Refactor]: Image => Video
